<resources>
    <string name="app_name">BLE Connectivity</string>
    <string name="main_screen">Connect to device</string>
    <string name="connect_button">Connect to LED Controller</string>

    <string name="disconnect_button">"Disconnect"</string>
    <string name="edit_strip">"Edit group"</string>
    <string name="redSlider">"Red Value"</string>
    <string name="greenSlider">"Green Value"</string>
    <string name="blueSlider">"Blue Value"</string>
    <string name="redValue">"R"</string>
    <string name="blueValue">"B"</string>
    <string name="greenValue">"G"</string>
    <string name="turnOff">"Turn group off"</string>
    <string name="redActual">""</string>
    <string name="blueActual">""</string>
    <string name="greenActual">""</string>
    <string-array name="led_selection_array">
        <item>Group 1</item>
        <item>Group 2</item>
        <item>Group 3</item>
        <item>Group 4</item>
        <item>Group 5</item>
    </string-array>

</resources>
